--- a/index.html
+++ b/index.html
@@ -172,8 +172,14 @@
 </head>
 <body>
 
-    <h1><span id="rainbow-text">Cool-O-Meter</span>: EU Media edition</h1>
-    <p>Let's have some fun. Drag the logos to rate them on both axes.</p>
+    <h1><span id="rainbow-text">EU Media Vibe Check</span></h1>
+    <p>How do you see different EU media? Rate them for:</p>
+    <h2>Access ↔ Adversarial</h2>
+    <p>Access: journalism built on cultivating proximity to power, exclusive leaks, sympathetic framing.</p>
+    <p>Adversarial: watchdog, confrontational, investigative, holding power to account.</p>
+    <h2>Highbrow ↔ Lowbrow</h2>
+    <p>Highbrow: policy wonkery, dense analysis, intellectual framing.</p>
+    <p>Lowbrow: gossip, personalities, horse-race politics, drama.</p>
 
     <div id="main-container">
         <div id="x-axis" class="axis"></div>
