--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
 
     <h1><span id="rainbow-text">EU Media Vibe Check</span></h1>
     <p>How do you see different EU media? Rate them for:</p>
-    <h2>Access ↔ Adversarial</h2>
-    <p>Access: journalism built on cultivating proximity to power, exclusive leaks, sympathetic framing.</p>
-    <p>Adversarial: watchdog, confrontational, investigative, holding power to account.</p>
-    <h2>Highbrow ↔ Lowbrow</h2>
-    <p>Highbrow: policy wonkery, dense analysis, intellectual framing.</p>
-    <p>Lowbrow: gossip, personalities, horse-race politics, drama.</p>
+    <h4>Access ↔ Adversarial</h4>
+    <p><b>Access</b>: journalism built on cultivating proximity to power, exclusive leaks, sympathetic framing.</p>
+    <p><b>Adversarial</b>: watchdog, confrontational, investigative, holding power to account.</p>
+    <h4>Highbrow ↔ Lowbrow</h4>
+    <p><b>Highbrow</b>: policy wonkery, dense analysis, intellectual framing.</p>
+    <p><b>Lowbrow</b>: gossip, personalities, horse-race politics, drama.</p>
 
     <div id="main-container">
         <div id="x-axis" class="axis"></div>
