--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
 
         #block1 {
             float:left;
+            width: 50%;
         }
 
         #block2
         {
             float:right;
+            width: 50%;
         }
 
         /* Main container for the axes and logos */
