--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             margin-bottom: 20px;
         }
         .wrapper {
-            width:600px;
+            width:90vw;
             margin: 0 auto;
         }
 
