--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         /* Main container for the axes and logos */
         #main-container {
-            width: 90vw;
+            width: 80vw;
             height: 70vh;
             max-width: 800px;
             max-height: 600px;
@@ -83,10 +83,10 @@
             font-weight: bold;
             color: #4a5568;
         }
-        #label-access { left: -60px; top: 60%; transform: translateY(-50%); }
-        #label-adversarial { right: -90px; top: 60%; transform: translateY(-50%); }
-        #label-highbrow { top: -30px; left: 50%; transform: translateX(-50%); }
-        #label-lowbrow { bottom: -30px; left: 50%; transform: translateX(-50%); }
+        #label-access {  top: 55%; transform: translateY(-50%); }
+        #label-adversarial { top: 55%; transform: translateY(-50%); }
+        #label-highbrow {  left: 45%; transform: translateX(-50%); }
+        #label-lowbrow {  left: 55%; transform: translateX(-50%); }
 
         /* Styling for the draggable logo containers */
         .logo-container {
