--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             font-weight: bold;
             color: #4a5568;
         }
-        #label-access {  top: 55%; transform: translateY(-50%); }
-        #label-adversarial { top: 55%; transform: translateY(-50%); }
-        #label-highbrow {  left: 45%; transform: translateX(-50%); }
-        #label-lowbrow {  left: 55%; transform: translateX(-50%); }
+        #label-access { right: -1px; top: 55%; transform: translateY(-50%); }
+        #label-adversarial { left: -1px; top: 55%; transform: translateY(-50%); }
+        #label-highbrow { top: -1px; left: 45%; transform: translateX(-50%); }
+        #label-lowbrow {  bottom: -1px; left: 55%; transform: translateX(-50%); }
 
         /* Styling for the draggable logo containers */
         .logo-container {
