--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
             width: 50%;
         }
 
+        .footer{
+            float:left;
+        }
+
         /* Main container for the axes and logos */
         #main-container {
             width: 80vw;
@@ -328,6 +332,8 @@
             });
         });
     </script>
+    <div class="footer">
     <p>By Alejandro Tauber, publisher of EUobserver.</p>
+    </div>
 </body>
 </html>
