--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             font-weight: bold;
             color: #4a5568;
         }
-        #label-access { right: -1px; top: 55%; transform: translateY(-50%); }
-        #label-adversarial { left: -1px; top: 55%; transform: translateY(-50%); }
+        #label-access { left: -1px; top: 55%; transform: translateY(-50%); }
+        #label-adversarial { right: -1px; top: 55%; transform: translateY(-50%); }
         #label-highbrow { top: -1px; left: 40%; transform: translateX(-50%); }
         #label-lowbrow {  bottom: -1px; left: 60%; transform: translateX(-50%); }
 
