--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 
         .footer{
             float:left;
+            position:absolute;
+            bottom:0;
+            left:0;
         }
 
         /* Main container for the axes and logos */
