--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             float:left;
             position:absolute;
             bottom:0;
-            left:0;
+            left: 20px;
         }
 
         /* Main container for the axes and logos */
