--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <script src="https://unpkg.com/draggabilly@3/dist/draggabilly.pkgd.min.js"></script>
 
     <script>
-        const WEB_APP_URL = 'YOUR_WEB_APP_URL_GOES_HERE'; // Make sure to use the correct URL
+        const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbyktrxnIFNklfwsqk0SgokuD5cgo6FsIdumu8sS6g1-N4nO_KkQMkXKPU9T7w-NwUlQ/exec'; // Make sure to use the correct URL
 
         document.addEventListener('DOMContentLoaded', () => {
             const container = document.getElementById('main-container');
