--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <div class="logo-container" data-publication="VoxEurop"><img src="https://logo.clearbit.com/voxeurop.eu" class="logo" alt="Vox Europ" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=Vox+Europ';"></div>
         <div class="logo-container" data-publication="InvestigateEurope"><img src="https://logo.clearbit.com/investigate-europe.eu/" class="logo" alt="Investigate Europe" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=Investigate+Europe';"></div>
         <div class="logo-container" data-publication="Contexte"><img src="https://logo.clearbit.com/contexte.com/" class="logo" alt="Contexte" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=Contexte';"></div>
-        <div class="logo-container" data-publication="BrusselsSignal"><img src="https://logo.clearbit.com/brusselssignal.com/" class="logo" alt="Brussels Signal" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=Brussels+Signal';"></div>
+        <div class="logo-container" data-publication="BrusselsSignal"><img src="https://imgur.com/a/mutlVck.png" class="logo" alt="Brussels Signal" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=Brussels+Signal';"></div>
 
     </div>
 
