--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
         <div class="logo-container" data-publication="EUobserver"><img src="https://pbs.twimg.com/profile_images/1810305249112195072/anjXCvnl_400x400.png" class="logo" alt="EUobserver" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=EUobserver';"></div>
         <div class="logo-container" data-publication="Euronews"><img src="https://logo.clearbit.com/euronews.com" class="logo" alt="Euronews" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=Euronews';"></div>
         <div class="logo-container" data-publication="MLex"><img src="https://logo.clearbit.com/mlex.com" class="logo" alt="MLex" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=MLex';"></div>
+        <div class="logo-container" data-publication="BrusselsSignal"><img src="https://i.imgur.com/oeyQb4x.png" class="logo" alt="Brussels Signal" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=Brussels+Signal';"></div>
         <div class="logo-container" data-publication="FollowTheMoney"><img src="https://logo.clearbit.com/ftm.eu" class="logo" alt="Follow The Money" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=FTM';"></div>
         <div class="logo-container" data-publication="TheEuropeanCorrespondent"><img src="https://logo.clearbit.com/europeancorrespondent.com" class="logo" alt="The European Correspondent" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=TEC';"></div>
         <div class="logo-container" data-publication="CapitolForum"><img src="https://logo.clearbit.com/thecapitolforum.com" class="logo" alt="Capitol Forum" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=Capitol+Forum';"></div>
@@ -236,8 +237,6 @@
         <div class="logo-container" data-publication="VoxEurop"><img src="https://logo.clearbit.com/voxeurop.eu" class="logo" alt="Vox Europ" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=Vox+Europ';"></div>
         <div class="logo-container" data-publication="InvestigateEurope"><img src="https://logo.clearbit.com/investigate-europe.eu/" class="logo" alt="Investigate Europe" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=Investigate+Europe';"></div>
         <div class="logo-container" data-publication="Contexte"><img src="https://logo.clearbit.com/contexte.com/" class="logo" alt="Contexte" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=Contexte';"></div>
-        <div class="logo-container" data-publication="BrusselsSignal"><img src="https://imgur.com/a/mutlVck.png" class="logo" alt="Brussels Signal" onerror="this.onerror=null;this.src='https://placehold.co/100x40/000000/FFFFFF?text=Brussels+Signal';"></div>
-
     </div>
 
     <button id="submit-btn">Submit Scores</button>
