--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             float:left;
             bottom:0;
             left: 20px;
+            align-content: left;
         }
 
         /* Main container for the axes and logos */
